--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -150,7 +150,7 @@ THIS SECTIONS BUILDS ON THE SALIX DATA TO ILLUSTRATE THE GAPS THERE ARE IN THE M
   A simple example will illustrate the problem: assume that we want to infer the probability of an interaction between two species, A and B. Now assume that in reality, interaction between A and B is completely impossible (i.e. the true $\lambda$= 0). Given no added detection error in observing the incidence of the interaction, then a single observation of species co-occurrence will reveal (very) little regarding the probability of the interaction – the confidence limits for one observation essentially spans from 0 to 1 (see following section). For 5 observations, this confidence limit will still extends to 0.5. Only with thirty observations will it shrink to 0.1. Thus, adding (many) more observations is certainly useful in controlling uncertainty due to stochasticity inherent in the process itself.
 
   \begin{figure}
-    \caption{This figure illustrates the upper bound (solid black line) of a 95\% confidence interval for the interaction probability $\lamba$ when there is no observation of an interaction ($k = 0$) and $n$ observations of the two species co-occurring at a given location. The confidence interval is based on the Clopper-Pearson derivation from the beta distribution. A threshold interaction probability of 0.1 is indicated by the dotted red line.}
+    \caption{This figure illustrates the upper bound (solid black line) of a 95\% confidence interval for the interaction probability $\lambda$ when there is no observation of an interaction ($k = 0$) and $n$ observations of the two species co-occurring at a given location. The confidence interval is based on the Clopper-Pearson derivation from the beta distribution. A threshold interaction probability of 0.1 is indicated by the dotted red line.}
     \label{upper_limits}
     \includegraphics*[width=.8\textwidth]{figures/upper_limit_DG.eps}
   \end{figure}
@@ -291,7 +291,7 @@ THIS SECTIONS BUILDS ON THE SALIX DATA TO ILLUSTRATE THE GAPS THERE ARE IN THE M
           The degree of a node in a network is defined as the number of interactions it has to other nodes. The degree distribution of a network is then the probability distribution of these degrees over the whole network. Connectance is an average property for a complete given network, and it represents the expected degree (expected number of interactions per species) standardized by the number of species in the network. The standardized degree could therefore be interpreted as an interaction probability. It is consequently possible to use the degree distribution to inform the prior distribution. The degree distribution could come from several networks, from a similar network (e.g. a known network at slightly different location) or from the network of interest if interaction probabilities for some species are already documented. The latter approach allows us to apply information from known, abundant species to the rarest species for which interactions are less frequently documented. The procedure for the estimation of the hyper parameters follows the same approach as described above for connectance except that each measurement is at the individual species level instead of the network level.
 
          
-          If our focal network describes a similar system to that in a known network, we can use the distribution of interaction probabilities in that network to inform our prior. The probability of any interaction $L_ij$ depends on the degrees of species $i$ and $j$. The degree of a node is defined as the number of interactions it has with other nodes. Connectance, as the average number of links per species in the whole network, is thus also the expected degree for any given species normalized by the number of species in the network. Using normalized degrees $\Delta_i$ and $\Delta_j$ (i.e., degrees divided by the number of species in the network), we can obtain the probability of interaction $L_ij$=$\Delta_i$\times$\Delta_j$. The distribution of these interaction probabilities derived from a similar network or a suite of networks can be used to establish a prior distribution before any data from the focal network are collected. We could also use this approach to build a prior distribution using known interaction probabilities for some species in the focal network. The latter approach allows us to apply information from known, abundant species to the rarest species for which interactions are less frequently documented. The procedure for the estimation of the hyper parameters follows the same approach as described above for connectance except that each measurement is at the individual interaction level instead of the network level.
+          If our focal network describes a similar system to that in a known network, we can use the distribution of interaction probabilities in that network to inform our prior. The probability of any interaction $L_ij$ depends on the degrees of species $i$ and $j$. The degree of a node is defined as the number of interactions it has with other nodes. Connectance, as the average number of links per species in the whole network, is thus also the expected degree for any given species normalized by the number of species in the network. Using normalized degrees $\Delta_i$ and $\Delta_j$ (i.e., degrees divided by the number of species in the network), we can obtain the probability of interaction $L_ij$=$\Delta_i\times\Delta_j$. The distribution of these interaction probabilities derived from a similar network or a suite of networks can be used to establish a prior distribution before any data from the focal network are collected. We could also use this approach to build a prior distribution using known interaction probabilities for some species in the focal network. The latter approach allows us to apply information from known, abundant species to the rarest species for which interactions are less frequently documented. The procedure for the estimation of the hyper parameters follows the same approach as described above for connectance except that each measurement is at the individual interaction level instead of the network level.
 
 
       \subsubsection*{Trait-matching function}. 
@@ -318,8 +318,7 @@ THIS SECTIONS BUILDS ON THE SALIX DATA TO ILLUSTRATE THE GAPS THERE ARE IN THE M
 
     \vspace{12pt}
     \noindent\emph{
-       int_probs = c(0.33, 0.09, 0.06, 0.08, 0.42, 0.16, 0.06, 0.38, 0.03, 0.02)
-        }.
+       int\_probs = c(0.33, 0.09, 0.06, 0.08, 0.42, 0.16, 0.06, 0.38, 0.03, 0.02) }.
       \vspace{12pt}
 
 
