--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -1,4 +1,4 @@
-﻿\documentclass[12pt]{article} 
+\documentclass[12pt]{article} 
 \usepackage{amsmath} 
 \usepackage[dvips]{graphicx}
 \usepackage{multirow} 
@@ -34,7 +34,7 @@ Link\"{o}ping, Sweden\\
 % $^\dagger$ Corresponding author:\\
 % alyssa.cirtwill@gmail.com\\
 % +46 723 158464\\
- }
+}
 
 \renewcommand\Authands{ and }
 
