Expanding on description of data section.

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -349,8 +349,7 @@ THIS SECTIONS BUILDS ON THE SALIX DATA TO ILLUSTRATE THE GAPS THERE ARE IN THE M
 
     \subsection*{Description of the data}
 
-      [[Kate, can you expand this?]]
-      \emph{Salix}-galler-parasitoid meta-network, here focusing on the smaller \emph{Salix}-galler network. The meta-network consists of interactions between 52? \emph{Salix} species and 222 species of gall-forming insects, sampled from 374 locations in Europe ranging from Sicily to the Arctic. In total, 4295 unique interactions were observed. Each of the 374 locations can be considered as a network in its own right, but here we consider each network as an independent sample from which to build the meta-network.
+      We use an extensively sampled \emph{Salix}-galler-parasitoid meta-network as a case study. This dataset consists of a single community type sampled across Europe, including willow (\emph{Salix}) species, willow-galling sawflies (Hymenoptera, Tenthredinidae, Nematinae, Euurina), and their natural enemies (hymenopteran parasitoids and coleopteran, lepidopteran, dipteran, and hymenopteran inquilines). The data was collected over 29 years (1982-2010) at 374 unique locations across Europe ranging from Sicily to the Arctic. Including repeated visits to a number of sites, the data set contains 641 site-visits, each of which can be considered as a network in its own right, but here we consider each network as an independent sample from which to build the meta-network. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes and 126 natural enemy nodes. Interactions were determined by dissecting and rearing gall inhabitants from 165,424 galls. Something about how the suitability of this for what we're doing. E.g: The high spatiotemporal resolution of this network and the 641 site-visits which can be considered as independent samples of the network make this dataset particularly well suited for testing this method.
 
 
     \subsection*{Finding the maximum likelihood estimate}
