starting to add parasitoids to the figures

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -160,7 +160,7 @@ THIS SECTIONS BUILDS ON THE SALIX DATA TO ILLUSTRATE THE GAPS THERE ARE IN THE M
 
 
   \begin{figure}
-    \caption{\textbf{A)} Most pairs of \emph{Salix} and galler species were never observed co-occurring despite the high levels of replication in our example dataset. For those that were observed together at least once, the number of observed co-occurances was generally small (\textless10). Here we show a histogram of the number of pairs of species observed co-occurring at least once. 3986 pairs of species were never observed co-occurring: these pairs are omitted from the histogram. \textbf{B)} Most pairs of species that were observed at the same site were never observed interacting. Here we show a histogram of the number of observed interactions within pairs of co-occurring species. \textbf{C)} Here we show, for each species pair, the number of observed interactions plotted against the number of observed co-occurances. Most pairs either are never observed interacting or interact almost every time they co-occur. The red, dashed line indicates a 1:1 relationship between interactions and co-occurances.}
+    \caption{\textbf{A-B)} Most pairs of \emph{Salix} and galler or galler and parasitoid species were never observed co-occurring despite the high levels of replication in our example dataset. For those that were observed together at least once, the number of observed co-occurances was generally small (\textless10). Here we show a histogram of the number of pairs of species observed co-occurring at least once. 3986 pairs of species were never observed co-occurring: these pairs are omitted from the histogram. \textbf{C-D)} Most pairs of species that were observed at the same site were never observed interacting. Here we show a histogram of the number of observed interactions within pairs of co-occurring species. \textbf{E-F)} Here we show, for each species pair, the number of observed interactions plotted against the number of observed co-occurances. Most pairs either are never observed interacting or interact almost every time they co-occur. The red, dashed line indicates a 1:1 relationship between interactions and co-occurances.}
     \label{histograms}
     \includegraphics*[width=.8\textwidth]{figures/Salix_Galler_histogram.eps}
     \end{figure}
